ini untuk progress ke-3
